Fixes Check Button Alignment!
This will fix the Check (Mark All as Read) button Alignment bug that a piece of code didn't fix yesterday and failed to work correctly.

--- a/material.css
+++ b/material.css
@@ -248,7 +248,7 @@ width: 36px;
 .sideNav .Dropdown--select .Dropdown-menu {
   display:block;
   border:1;
-  width: 64px;
+  width: 63px;
   margin:0;
   padding:0;
   padding-left: 10px;
